<resources>
    <string name="app_name">HazMat 5th</string>
    <string name="title_home_page">HAZARDOUS MATERIALS\nFOR FIRST RESPONDERS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_videos">Videos</string>
    <string name="title_identify">Identify</string>
    <string name="title_exam_prep">Exam Prep</string>
    <string name="title_course">Course</string>
    <string name="version_number">FIFTH EDITION</string>
    <string name="title_activity_videos_list">VideosListActivity</string>
    <string name="title_search">search</string>
    <string name="title_bookmarked">Bookmarked Only</string>'
    <string name="bookmark_preference_file_key">BOOKMARK_PREFERENCE_FILE_KEY</string>
    <string name="no_bookmarks_description">No bookmarks to show!</string>
    <string name="progress_dialog_description">Media loading,Please wait.</string>
    <string name="video_loading_error">Sorry! Cannot load videos..</string>
    <string name="identify_title">Container Identification</string>
    <string name="vimeo_access_token">45a55622390b2eec18ed6c5fd366fdfc</string>
    <string name="title_activity_identify">IdentifyActivity</string>
    <string name="max_identify_questions">157</string>
    <string name="identify_preference_file_key">IDENTIFY_PREFERENCE_FILE_KEY</string>
    <string name="skip">Skip</string>
    <string name="search_title">Search</string>
    <string name="cart_title">Buy</string>
    <string name="delete_title">Clear all data?</string>
    <string name="wrong_title">Wrong</string>
    <string name="right_title">Right</string>
    <string name="score_title">Score(%)</string>
    <string name="identify_delete_preferences_description">This will erase all of your progress. Continue?</string>
    <string name="title_select_all_chapters">Select all chapters</string>
    <string name="toast_if_no_chapters_selected">Please select at least one chapter.</string>
    <string name="toast_if_no_options_selected">Please select all the options before continuing.</string>
    <string name="title_number_of_questions">Number of questions:</string>
    <string name="title_missed_questions">Add missed questions to study deck:</string>
    <string name="title_feedback_style">Feedback style:</string>
    <string name="title_immediate_answeres">Immediate answers</string>
    <string name="title_results_at_end">Results at the end</string>
    <string name="title_select_options">Select options</string>
    <string name="title_add_to_study_deck">Add to study deck</string>
    <string name="exam_prep_test_options_preference_file_key">EXAM_PREP_TEST_OPTIONS_PREFERENCE_FILE_KEY</string>
    <string name="max_number_of_attempts">MAX_NUMBER_OF_ATTEMPTS</string>
    <string name="title_max_number_of_attempts">MAX NUMBER OF ATTEMPTS</string>
    <string name="title_clear_test_results">CLEAR TEST RESULTS</string>
    <string name="title_clear_study_deck">CLEAR STUDY DECK</string>
    <string name="companion">Companion</string>
    <string name="tap_to_begin">Tap to Begin!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toast_identify_notification">Tap anywhere to begin.</string>
</resources>
