<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="5"
    android:orientation="vertical"
    android:background="@color/transparentBlack"
    tools:context="com.example.appcenter.companion.examprep.ExamPrepOptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/examprep_logo"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/title_select_options"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/title_number_of_questions"/>
        <NumberPicker
            android:id="@+id/number_picker"
            android:layout_width="0dp"
            android:descendantFocusability="blocksDescendants"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/title_missed_questions"/>

        <RadioGroup
            android:id="@+id/study_deck_radio_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

           <RadioButton
            android:id="@+id/option_1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
               android:textColor="@android:color/white"
               android:textAppearance="@android:style/TextAppearance.Medium"
               android:text="Yes"
            />
         <RadioButton
            android:id="@+id/option_2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
             android:textColor="@android:color/white"
             android:textAppearance="@android:style/TextAppearance.Medium"
             android:text="no"
             />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:text="@string/title_feedback_style"/>

        <RadioGroup
            android:id="@+id/feedback_radio_group"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/feedback_option_1"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:textColor="@android:color/white"
                android:layout_weight="1"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/title_immediate_answeres"
                />
            <RadioButton
                android:id="@+id/feedback_option_2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:textAppearance="@android:style/TextAppearance.Medium"
                android:text="@string/title_results_at_end"
                />
        </RadioGroup>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        >

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Save" />
    </LinearLayout>
</LinearLayout>
